--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </mein>
 <footer>
     <section class="footer">
-        <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
+        <a class="footer-logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
         <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer-contact-list">
             <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
