--- a/index.html
+++ b/index.html
@@ -11,102 +11,109 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+<div class="contanier">
+    <heder class="heder">
+        <div class="nav-menu-left">
+            <nav class="navigation">
+                <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
+                <ul class="nav-list">
+                    <li class="nav-list-item"><a class="nav-list-link" href=".//index.html">Студія</a></li>
+                    <li class="nav-list-item"><a class="nav-list-link" href=".//Portfolio.html">Портфоліо</a></li>
+                    <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="nav-menu-right">
+            <ul class="contact-list">
+                <li class="contact-list-cont"><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+                <li class="contact-list-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+            </ul>
+        </div>
+    </heder>
     
-<heder>
-    <nav>
-        <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
-        <ul class="nav-list">
-            <li><a href="#">Студія</a></li>
-            <li><a href="#">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
-        </ul>
-    </nav>
-    <ul class="contact-list">
-        <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-    </ul>
-</heder>
-
-<mein>
-    <!--Section hero-->
-    <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
-    </section>
-
-    <!--section advantages-->
-    <section class="features">
-        <h2 class="visually-hidden"> Perevagy </h2>
-        <ul class="features-list">
-            <li>
-                <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h2>
-                <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h2>
-                <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li>
-                <h3 class="features-subtitle">ПЛАНУВАННЯ</h2>
-                <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                <p class="features-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
-    </section>
-    <section class="electricity">
-        <h2 class="electricity-parag">Чим ми займаємося</h2>
-        <ul class="electricity-list">
-            <li>
-                <img class="electricity-img" src="./Image/img1.png" alt="computer">
-            </li>
-            <li>
-                <img class="electricity-img" src="./Image/img2.png" alt="mobile">
-            </li>
-            <li>
-                <img class="electricity-img" src="./Image/img3.png" alt="colors">
-            </li>
-        </ul>
-    </section>
-    <section class="people">
-        <h2 class="people-title">Наша команда</h2>
-        <ul class="people-list">
-            <li>
-                <img class="people-photo" src="./Image/img1.1.jpg" alt="ihor Demanienko">
-                <p class="people-name">Ігор Дем'яненко</p>
-                <p class="people-work">Product Designer</p>
-            </li>
-            <li>
-                <img class="people-photo" src="./Image/img1.2.jpg" alt="Olga Repina">
-                <p class="people-name">Ольга Рєпіна</p>
-                <p class="people-work">Frontend Developer</p>
-            </li>
-            <li>
-                <img class="people-photo" src="./Image/img1.3.jpg" alt="Mikola Tarasov">
-                <p class="people-name">Микола Тарасов</p>
-                <p class="people-work">Marketing</p>
-            </li>
-            <li>
-                <img class="people-photo" src="./Image/img1.4.jpg" alt="Mikhailo Ermakov">
-                <p class="people-name">Михайло Єрмаков</p>
-                <p class="people-work">UI Designer</p>
-            </li>
-        </ul>
-    </section>
-</mein>
-<footer>
-    <section class="footer">
-        <a class="footer-logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
-        <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="footer-contact-list">
-            <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-            <li><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-        </ul>
+    <main>
+        <!--Section hero-->
+        <section class="hero">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-btn" type="button">Замовити послугу</button>
+        </section>
     
-    </section>
-</footer>
+        <!--section advantages-->
+        <section class="features">
+            <h2 class="visually-hidden"> Perevagy </h2>
+            <ul class="features-list">
+                <li>
+                    <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h2>
+                        <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h2>
+                        <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3 class="features-subtitle">ПЛАНУВАННЯ</h2>
+                        <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <p class="features-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="electricity">
+            <h2 class="electricity-parag">Чим ми займаємося</h2>
+            <ul class="electricity-list">
+                <li>
+                    <img class="electricity-img" src="./Image/img1.png" alt="computer">
+                </li>
+                <li>
+                    <img class="electricity-img" src="./Image/img2.png" alt="mobile">
+                </li>
+                <li>
+                    <img class="electricity-img" src="./Image/img3.png" alt="colors">
+                </li>
+            </ul>
+        </section>
+        <section class="people">
+            <h2 class="people-title">Наша команда</h2>
+            <ul class="people-list">
+                <li class="people-cards">
+                    <img class="people-photo" src="./Image/img1.1.jpg" alt="ihor Demanienko">
+                    <p class="people-name">Ігор Дем'яненко</p>
+                    <p class="people-work">Product Designer</p>
+                </li>
+                <li class="people-cards">
+                    <img class="people-photo" src="./Image/img1.2.jpg" alt="Olga Repina">
+                    <p class="people-name">Ольга Рєпіна</p>
+                    <p class="people-work">Frontend Developer</p>
+                </li>
+                <li class="people-cards">
+                    <img class="people-photo" src="./Image/img1.3.jpg" alt="Mikola Tarasov">
+                    <p class="people-name">Микола Тарасов</p>
+                    <p class="people-work">Marketing</p>
+                </li>
+                <li class="people-cards">
+                    <img class="people-photo" src="./Image/img1.4.jpg" alt="Mikhailo Ermakov">
+                    <p class="people-name">Михайло Єрмаков</p>
+                    <p class="people-work">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <section class="footer">
+            <div class="footer-contact">
+                <a class="footer-logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
+                <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="footer-contact-list">
+                    <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+                    <li><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
+</div>   
+
 
 </body>
 </html>
