--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 </head>
 <body>
 <div class="contanier">
-    <heder class="heder">
-        <div class="nav-menu-left">
-            <nav class="navigation">
-                <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
-                <ul class="nav-list">
-                    <li class="nav-list-item"><a class="nav-list-link" href=".//index.html">Студія</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href=".//Portfolio.html">Портфоліо</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
+    <header class="header">
+        <div class="header-contanier">
+                <nav class="navigation">
+                     <div class="nav-menu-left">
+                    <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
+                    <ul class="nav-list">
+                        <li class="nav-list-item"><a class="nav-list-link" href=".//index.html">Студія</a></li>
+                        <li class="nav-list-item"><a class="nav-list-link" href=".//Portfolio.html">Портфоліо</a></li>
+                        <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
+                    </ul>
+                    </div>
+                </nav>
+            <div class="nav-menu-right">
+                <ul class="contact-list">
+                    <li class="contact-list-cont"><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+                    <li class="contact-list-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
                 </ul>
-            </nav>
+            </div>
         </div>
-        <div class="nav-menu-right">
-            <ul class="contact-list">
-                <li class="contact-list-cont"><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-                <li class="contact-list-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-            </ul>
-        </div>
-    </heder>
+    </header>
     
     <main>
         <!--Section hero-->
