--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="shortcut icon" href="./Image/W1.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
@@ -18,17 +17,15 @@
                      <div class="nav-menu-left">
                     <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
                     <ul class="nav-list">
-                        <li class="nav-list-item"><a class="nav-list-link" href=".//index.html">Студія</a></li>
-                        <li class="nav-list-item"><a class="nav-list-link" href=".//Portfolio.html">Портфоліо</a></li>
+                        <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
+                        <li class="nav-list-item"><a class="nav-list-link" href="./pages/Portfolio.html">Портфоліо</a></li>
                         <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
                     </ul>
                     </div>
                 </nav>
             <div class="nav-menu-right">
-                <ul class="contact-list">
-                    <li class="contact-list-cont"><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-                    <li class="contact-list-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-                </ul>
+                    <a class="contact-link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
+                    <a class="contact-link" href="tel:+380961111111"> +38 096 111 11 11 </a>
             </div>
         </div>
     </header>
@@ -36,13 +33,13 @@
     <main>
         <!--Section hero-->
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
             <button class="hero-btn" type="button">Замовити послугу</button>
         </section>
     
         <!--section advantages-->
         <section class="features">
-            <h2 class="visually-hidden"> Perevagy </h2>
+            <h2 class="visually-hidden" hidden> Perevagy </h2>
             <ul class="features-list">
                 <li>
                     <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h2>
