--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="header-contanier">
                 <nav class="navigation">
                      <div class="nav-menu-left">
-                    <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
-                    <ul class="nav-list">
-                        <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
-                        <li class="nav-list-item"><a class="nav-list-link" href="./pages/Portfolio.html">Портфоліо</a></li>
-                        <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
-                    </ul>
+                        <a class="logo-link" href="./index.html"><span class="web">Web</span>Studio</a>
+                        <ul class="nav-list">
+                            <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
+                            <li class="nav-list-item"><a class="nav-list-link" href="./pages/Portfolio.html">Портфоліо</a></li>
+                            <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
+                        </ul>
                     </div>
                 </nav>
             <div class="nav-menu-right">
@@ -63,13 +63,13 @@
             <h2 class="electricity-parag">Чим ми займаємося</h2>
             <ul class="electricity-list">
                 <li>
-                    <img class="electricity-img" src="./Image/img1.png" alt="computer">
+                    <img class="electricity-img" src="./Image/img1.jpg" alt="computer">
                 </li>
                 <li>
-                    <img class="electricity-img" src="./Image/img2.png" alt="mobile">
+                    <img class="electricity-img" src="./Image/img2.jpg" alt="mobile">
                 </li>
                 <li>
-                    <img class="electricity-img" src="./Image/img3.png" alt="colors">
+                    <img class="electricity-img" src="./Image/img3.jpg" alt="colors">
                 </li>
             </ul>
         </section>
