--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -41,48 +41,48 @@
             <section class="main-section-cards">
                 <ul class="list-cards">
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img1.5.png" alt="computer">
+                        <img class="main-img" src="../Image/img1.5.jpg" alt="computer">
                         <h3 class="main-title">Технокряк</h3>
                         <p class="main-parag">Веб-сайт</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img2.5.png" alt="basketboll">
+                        <img class="main-img" src="../Image/img2.5.jpg" alt="basketboll">
                         <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
                         <p class="main-parag">Дизайн</p>
 
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img3.5.png" alt="seafood">
+                        <img class="main-img" src="../Image/img3.5.jpg" alt="seafood">
                         <h3 class="main-title">Ресторан Seafood</h3>
                         <p class="main-parag">Додаток</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img4.5.png" alt="prime">
+                        <img class="main-img" src="../Image/img4.5.jpg" alt="prime">
                         <h3 class="main-title">Проєкт Prime</h3>
                         <p class="main-parag">Маркетинг</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img5.5.png" alt="box">
+                        <img class="main-img" src="../Image/img5.5.jpg" alt="box">
                         <h3 class="main-title">Проєкт Boxes</h3>
                         <p class="main-parag">Додаток</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img6.5.png" alt="computer">
+                        <img class="main-img" src="../Image/img6.5.jpg" alt="computer">
                         <h3 class="main-title">Inspiration has no Borders</h3>
                         <p class="main-parag">Веб-сайт</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img7.5.png" alt="book">
+                        <img class="main-img" src="../Image/img7.5.jpg" alt="book">
                         <h3 class="main-title">Видання Limited Edition</h3>
                         <p class="main-parag">Дизайн</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img8.5.png" alt="lab">
+                        <img class="main-img" src="../Image/img8.5.jpg" alt="lab">
                         <h3 class="main-title">Проєкт LAB</h3>
                         <p class="main-parag">Маркетинг</p>
                     </li>
                     <li class="main-list-item">
-                        <img class="main-img" src="../Image/img9.5.png" alt="computer">
+                        <img class="main-img" src="../Image/img9.5.jpg" alt="computer">
                         <h3 class="main-title">Growing Business</h3>
                         <p class="main-parag">Додаток</p>
                     </li>
