--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
                     </div>
                 </nav>
             <div class="nav-menu-right">
-                    <a class="contact-link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
-                    <a class="contact-link" href="tel:+380961111111"> +38 096 111 11 11 </a>
+                    <a class="contact-link" href="mailto:info@devstudio.com">
+                        <svg class="icon-contact" wight="16" height="12">
+                            <use href="./icons/symbol-defs.svg#icon-email">
+                            </use>
+                        </svg> info@devstudio.com </a>
+                    <a class="contact-link" href="tel:+380961111111">
+                        <svg class="icon-contact" wight="10" height="16">
+                            <use href="./icons/symbol-defs.svg#icon-phone">
+                            </use>
+                        </svg> +38 096 111 11 11 </a>
             </div>
         </div>
     </header>
@@ -80,6 +88,12 @@
                     <img class="people-photo" src="./Image/img1.1.jpg" alt="ihor Demanienko">
                     <p class="people-name">Ігор Дем'яненко</p>
                     <p class="people-work">Product Designer</p>
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
                 </li>
                 <li class="people-cards">
                     <img class="people-photo" src="./Image/img1.2.jpg" alt="Olga Repina">
