--- a/index.html
+++ b/index.html
@@ -50,20 +50,40 @@
             <h2 class="visually-hidden" hidden> Perevagy </h2>
             <ul class="features-list">
                 <li>
+                    <div class="features-cart">
+                        <svg class="features-cart-icon" wight="70" height="70">
+                            <use href="./icons/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h2>
-                        <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
+                    <div class="features-cart">
+                        <svg class="features-cart-icon" wight="70" height="70">
+                            <use href="./icons/symbol-defs.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h2>
-                        <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
+                    <div class="features-cart">
+                        <svg class="features-cart-icon" wight="70" height="70">
+                            <use href="./icons/symbol-defs.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="features-subtitle">ПЛАНУВАННЯ</h2>
-                        <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
+                    <div class="features-cart">
+                        <svg class="features-cart-icon" wight="70" height="70">
+                            <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                        <p class="features-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p class="features-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
@@ -88,12 +108,18 @@
                     <img class="people-photo" src="./Image/img1.1.jpg" alt="ihor Demanienko">
                     <p class="people-name">Ігор Дем'яненко</p>
                     <p class="people-work">Product Designer</p>
-                    <ul>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
+                    <svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                    </svg>
+                    <svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                    <svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                    <svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-in"></use>
+                    </svg>
                 </li>
                 <li class="people-cards">
                     <img class="people-photo" src="./Image/img1.2.jpg" alt="Olga Repina">
