--- a/index.html
+++ b/index.html
@@ -108,33 +108,77 @@
                     <img class="people-photo" src="./Image/img1.1.jpg" alt="ihor Demanienko">
                     <p class="people-name">Ігор Дем'яненко</p>
                     <p class="people-work">Product Designer</p>
-                    <svg class="people-icons" wight="20" height="20">
+                    <ul class="icons-list">
+                        <li><svg class="people-icons" wight="20" height="20">
                         <use href="./icons/symbol-defs.svg#icon-inst"></use>
-                    </svg>
-                    <svg class="people-icons" wight="20" height="20">
-                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                    <svg class="people-icons" wight="20" height="20">
-                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                    <svg class="people-icons" wight="20" height="20">
-                        <use href="./icons/symbol-defs.svg#icon-in"></use>
-                    </svg>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-in"></use>
+                        </svg></li>
+                    </ul>
                 </li>
                 <li class="people-cards">
                     <img class="people-photo" src="./Image/img1.2.jpg" alt="Olga Repina">
                     <p class="people-name">Ольга Рєпіна</p>
                     <p class="people-work">Frontend Developer</p>
+                    <ul class="icons-list">
+                        <li><svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-in"></use>
+                        </svg></li>
+                    </ul>
                 </li>
                 <li class="people-cards">
                     <img class="people-photo" src="./Image/img1.3.jpg" alt="Mikola Tarasov">
                     <p class="people-name">Микола Тарасов</p>
                     <p class="people-work">Marketing</p>
+                    <ul class="icons-list">
+                        <li><svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-in"></use>
+                        </svg></li>
+                    </ul>
                 </li>
                 <li class="people-cards">
                     <img class="people-photo" src="./Image/img1.4.jpg" alt="Mikhailo Ermakov">
                     <p class="people-name">Михайло Єрмаков</p>
                     <p class="people-work">UI Designer</p>
+                    <ul class="icons-list">
+                        <li><svg class="people-icons" wight="20" height="20">
+                        <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                        </svg></li>
+                        <li><svg class="people-icons" wight="20" height="20">
+                            <use href="./icons/symbol-defs.svg#icon-in"></use>
+                        </svg></li>
+                    </ul>
                 </li>
             </ul>
         </section>
