--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 </nav>
             <div class="nav-menu-right">
                     <a class="contact-link" href="mailto:info@devstudio.com">
-                        <svg class="icon-contact" wight="16" height="12">
+                        <svg class="icon-contact" width="16" height="12">
                             <use href="./icons/symbol-defs.svg#icon-email">
                             </use>
                         </svg> info@devstudio.com </a>
                     <a class="contact-link" href="tel:+380961111111">
-                        <svg class="icon-contact" wight="10" height="16">
+                        <svg class="icon-contact" width="10" height="16">
                             <use href="./icons/symbol-defs.svg#icon-phone">
                             </use>
                         </svg> +38 096 111 11 11 </a>
@@ -49,40 +49,40 @@
         <section class="features">
             <h2 class="visually-hidden" hidden> Perevagy </h2>
             <ul class="features-list">
-                <li>
-                    <div class="features-cart">
-                        <svg class="features-cart-icon" wight="70" height="70">
+                <li class="features-list-item">
+                    <!-- <div class="features-cart">
+                        <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-antenna"></use>
                         </svg>
-                    </div>
-                    <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h2>
+                    </div> -->
+                    <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
                     <div class="features-cart">
-                        <svg class="features-cart-icon" wight="70" height="70">
+                        <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-clock"></use>
                         </svg>
                     </div>
-                    <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h2>
+                    <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
                     <div class="features-cart">
-                        <svg class="features-cart-icon" wight="70" height="70">
+                        <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-diagram"></use>
                         </svg>
                     </div>
-                    <h3 class="features-subtitle">ПЛАНУВАННЯ</h2>
+                    <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
                     <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
                     <div class="features-cart">
-                        <svg class="features-cart-icon" wight="70" height="70">
+                        <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
                         </svg>
                     </div>
-                    <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="features-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -109,16 +109,16 @@
                     <p class="people-name">Ігор Дем'яненко</p>
                     <p class="people-work">Product Designer</p>
                     <ul class="icons-list">
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                         <use href="./icons/symbol-defs.svg#icon-inst"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-twitter"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-facebook"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-in"></use>
                         </svg></li>
                     </ul>
@@ -128,16 +128,16 @@
                     <p class="people-name">Ольга Рєпіна</p>
                     <p class="people-work">Frontend Developer</p>
                     <ul class="icons-list">
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                         <use href="./icons/symbol-defs.svg#icon-inst"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-twitter"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-facebook"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-in"></use>
                         </svg></li>
                     </ul>
@@ -147,16 +147,16 @@
                     <p class="people-name">Микола Тарасов</p>
                     <p class="people-work">Marketing</p>
                     <ul class="icons-list">
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                         <use href="./icons/symbol-defs.svg#icon-inst"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-twitter"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-facebook"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-in"></use>
                         </svg></li>
                     </ul>
@@ -166,16 +166,16 @@
                     <p class="people-name">Михайло Єрмаков</p>
                     <p class="people-work">UI Designer</p>
                     <ul class="icons-list">
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                         <use href="./icons/symbol-defs.svg#icon-inst"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-twitter"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-facebook"></use>
                         </svg></li>
-                        <li><svg class="people-icons" wight="20" height="20">
+                        <li><svg class="people-icons" width="20" height="20">
                             <use href="./icons/symbol-defs.svg#icon-in"></use>
                         </svg></li>
                     </ul>
