--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <h2 class="visually-hidden" hidden> Perevagy </h2>
             <ul class="features-list">
                 <li class="features-list-item">
-                    <!-- <div class="features-cart">
+                    <div class="features-cart">
                         <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-antenna"></use>
                         </svg>
-                    </div> -->
+                    </div>
                     <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="features-paragraf">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-                <li>
+                <li class="features-list-item">
                     <div class="features-cart">
                         <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-clock"></use>
@@ -67,7 +67,7 @@
                     <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="features-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
-                <li>
+                <li class="features-list-item">
                     <div class="features-cart">
                         <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-diagram"></use>
@@ -76,7 +76,7 @@
                     <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
                     <p class="features-paragraf">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li>
+                <li class="features-list-item">
                     <div class="features-cart">
                         <svg class="features-cart-icon" width="70" height="70">
                             <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
