--- a/index.html
+++ b/index.html
@@ -120,21 +120,21 @@
         <section class="electricity contanier">
           <h2 class="electricity-parag">Чим ми займаємося</h2>
           <ul class="electricity-list">
-            <li>
+            <li class="electricity-list-item">
               <img
                 class="electricity-img"
                 src="./Image/img1.jpg"
                 alt="computer"
               />
             </li>
-            <li>
+            <li class="electricity-list-item">
               <img
                 class="electricity-img"
                 src="./Image/img2.jpg"
                 alt="mobile"
               />
             </li>
-            <li>
+            <li class="electricity-list-item">
               <img
                 class="electricity-img"
                 src="./Image/img3.jpg"
