--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                   <a class="nav-list-link" href="./index.html">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="./pages/Portfolio.html"
-                    >Портфоліо</a
-                  >
+                  <a class="nav-list-link" href="./pages/Portfolio.html">Портфоліо</a>
                 </li>
                 <li class="nav-list-item">
                   <a class="nav-list-link" href="#">Контакти</a>
@@ -121,25 +119,22 @@
           <h2 class="electricity-parag">Чим ми займаємося</h2>
           <ul class="electricity-list">
             <li class="electricity-list-item">
-              <img
-                class="electricity-img"
-                src="./Image/img1.jpg"
-                alt="computer"
-              />
+              <div class="thumb">
+                <img class="electricity-img" src="./Image/img1.jpg" alt="computer">
+                <div class="label">Десктопні додатки</div>
+              </div>
             </li>
             <li class="electricity-list-item">
-              <img
-                class="electricity-img"
-                src="./Image/img2.jpg"
-                alt="mobile"
-              />
+              <div class="thumb">
+                <img class="electricity-img" src="./Image/img2.jpg" alt="mobile">
+                <div class="label">Мобільні додатки</div>
+              </div>
             </li>
             <li class="electricity-list-item">
-              <img
-                class="electricity-img"
-                src="./Image/img3.jpg"
-                alt="colors"
-              />
+              <div class="thumb">
+                <img class="electricity-img" src="./Image/img3.jpg" alt="colors">
+                <div class="label">Дизайнерські рішення</div>
+              </div>
             </li>
           </ul>
         </section>
