--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -24,7 +24,7 @@
                   <a class="nav-list-link" href="../index.html">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="./pages/Portfolio.html"
+                  <a class="nav-list-link" href="./Portfolio.html"
                     >Портфоліо</a
                   >
                 </li>
@@ -73,51 +73,69 @@
         <section class="main-section-cards">
           <ul class="list-cards">
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img1.5.jpg" alt="computer" />
-              <h3 class="main-title">Технокряк</h3>
-              <p class="main-parag">Веб-сайт</p>
+              <div class="thumb">
+                <img class="main-img" src="../Image/img1.5.jpg" alt="computer" />
+              </div>
+                <h3 class="main-title">Технокряк</h3>
+                <p class="main-parag">Веб-сайт</p>
             </li>
             <li class="main-list-item">
-              <img
-                class="main-img"
+              <div class="thumb">
+                <img
+              class="main-img"
                 src="../Image/img2.5.jpg"
                 alt="basketboll"
               />
+              </div>
               <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
               <p class="main-parag">Дизайн</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img3.5.jpg" alt="seafood" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img3.5.jpg" alt="seafood" />
+              </div>
               <h3 class="main-title">Ресторан Seafood</h3>
               <p class="main-parag">Додаток</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img4.5.jpg" alt="prime" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img4.5.jpg" alt="prime" />
+              </div>
               <h3 class="main-title">Проєкт Prime</h3>
               <p class="main-parag">Маркетинг</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img5.5.jpg" alt="box" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img5.5.jpg" alt="box" />
+              </div>
               <h3 class="main-title">Проєкт Boxes</h3>
               <p class="main-parag">Додаток</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img6.5.jpg" alt="computer" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img6.5.jpg" alt="computer" />
+              </div>
               <h3 class="main-title">Inspiration has no Borders</h3>
               <p class="main-parag">Веб-сайт</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img7.5.jpg" alt="book" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img7.5.jpg" alt="book" />
+              </div>
               <h3 class="main-title">Видання Limited Edition</h3>
               <p class="main-parag">Дизайн</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img8.5.jpg" alt="lab" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img8.5.jpg" alt="lab" />
+              </div>
               <h3 class="main-title">Проєкт LAB</h3>
               <p class="main-parag">Маркетинг</p>
             </li>
             <li class="main-list-item">
-              <img class="main-img" src="../Image/img9.5.jpg" alt="computer" />
+              <div class="thumb">
+                <img class="main-img" src="../Image/img9.5.jpg" alt="computer" />
+              </div>
               <h3 class="main-title">Growing Business</h3>
               <p class="main-parag">Додаток</p>
             </li>
