--- a/index.html
+++ b/index.html
@@ -410,24 +410,20 @@
               </a>
               </li>
             </ul>
+            </section>
             <section class="subscribe">
-              <h3 class="subscribe-title">Підпишіться на розсилку</h3>
-              <ul class="subscribe-list">
-                <li class="subscribe-list-item">
-                  <input type="email" class="subscribe-input" placeholder="E-mail">
-                </li>
-                <li class="subscribe-list-item">
-                  <button class="subscribe-bth">
-                    <p class="subscribe-parag">Підписатися</p> 
+              <form action="#" class="footer-form">
+                <label class="footer-label">Підпишіться на розсилку
+                  <input type="email" class="footer-email" required placeholder="E-mail">
+                </label>
+                  <button type="submit" class="subscribe-bth">
+                    Підписатися
                     <svg class="subscribe-svg">
                       <use href="./icons/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                   </button>
-                </li>
-              </ul>
+              </form>
             </section>
-          </section>
-
         </div>
       </footer>
 
