--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -243,8 +243,20 @@
               </a>
               </li>
             </ul>
-          </section>
-
+            </section>
+            <section class="subscribe">
+              <form action="#" class="footer-form">
+                <label class="footer-label">Підпишіться на розсилку
+                  <input type="email" class="footer-email" required placeholder="E-mail">
+                </label>
+                  <button type="submit" class="subscribe-bth">
+                    Підписатися
+                    <svg class="subscribe-svg">
+                      <use href="../icons/symbol-defs.svg#icon-telegram"></use>
+                    </svg>
+                  </button>
+              </form>
+            </section>
         </div>
       </footer>
     </div>
